@@ -1,9 +1,21 @@
 group 'enjoy-java-books'
 version '1.0-SNAPSHOT'
 
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "io.freefair.gradle:lombok-plugin:3.2.0"
+    }
+}
+
 allprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
+    apply plugin: "io.freefair.lombok"
 
     repositories {
         mavenLocal()
@@ -12,8 +24,17 @@ allprojects {
         maven { url "https://plugins.gradle.org/m2/" }
     }
 
+    tasks.withType(JavaCompile).each {
+        it.options.compilerArgs.add('--enable-preview')
+    }
+
+    test {
+        jvmArgs(['--enable-preview'])
+    }
+
     dependencies {
         compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+        annotationProcessor 'org.projectlombok:lombok:1.18.6'
         compile group: 'com.google.guava', name: 'guava', version: '21.0'
         compile group: 'org.jooq', name: 'jool', version: '0.9.12'
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.7'
@@ -21,8 +42,10 @@ allprojects {
         compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
         compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.25'
         compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.1'
+        testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '2.1'
         testCompile group: 'org.mockito', name: 'mockito-core', version: '2.13.0'
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.2'
         testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.2'
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.3.2'
     }
 }
